[gd_scene load_steps=2 format=3 uid="uid://cyf481d5b2mti"]

[ext_resource type="Script" uid="uid://c5esihdc08k5u" path="res://scripts/CollectionView.gd" id="1_coll"]

[node name="CollectionView" type="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10
script = ExtResource("1_coll")

[node name="FilterBar" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="FilterLabel" type="Label" parent="FilterBar"]
layout_mode = 2
text = "Filter:"
vertical_alignment = 1

[node name="FilterAll" type="Button" parent="FilterBar"]
custom_minimum_size = Vector2(60, 35)
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "All"

[node name="FilterSulfur" type="Button" parent="FilterBar"]
custom_minimum_size = Vector2(80, 35)
layout_mode = 2
toggle_mode = true
text = "üî• Sulfur"

[node name="FilterMercury" type="Button" parent="FilterBar"]
custom_minimum_size = Vector2(90, 35)
layout_mode = 2
toggle_mode = true
text = "üíß Mercury"

[node name="FilterSalt" type="Button" parent="FilterBar"]
custom_minimum_size = Vector2(70, 35)
layout_mode = 2
toggle_mode = true
text = "‚õ∞Ô∏è Salt"

[node name="FilterVitae" type="Button" parent="FilterBar"]
custom_minimum_size = Vector2(80, 35)
layout_mode = 2
toggle_mode = true
text = "üåø Vitae"

[node name="FilterAether" type="Button" parent="FilterBar"]
custom_minimum_size = Vector2(80, 35)
layout_mode = 2
toggle_mode = true
text = "‚≠ê Aether"

[node name="SortBar" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SortLabel" type="Label" parent="SortBar"]
layout_mode = 2
text = "Sort by:"
vertical_alignment = 1

[node name="SortName" type="Button" parent="SortBar"]
custom_minimum_size = Vector2(80, 35)
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "Name"

[node name="SortRarity" type="Button" parent="SortBar"]
custom_minimum_size = Vector2(80, 35)
layout_mode = 2
toggle_mode = true
text = "Rarity"

[node name="SortElement" type="Button" parent="SortBar"]
custom_minimum_size = Vector2(80, 35)
layout_mode = 2
toggle_mode = true
text = "Element"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 6

[node name="SummaryLabel" type="Label" parent="."]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Showing 56 cards | Total: 56 | Common: 40 | Uncommon: 10 | Rare: 4 | Epic: 2 | Legendary: 0"
